Added new image

--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
       <div id="home">
     
         <div class="profile_name">
-          Joy Offere
+
           <div class="contact_info">
-            <img src="https://raw.githubusercontent.com/devicons/devicon/6910f0503efdd315c8f9b858234310c06e04d9c0/icons/antdesign/antdesign-plain.svg" alt="https://icons8.com/icon/124377/circled-envelope"/>
+            <img src="/JO WHITE ON BLACK.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
             hijoyoffere@gmail.com
+            <br>+2349068425081
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/6910f0503efdd315c8f9b858234310c06e04d9c0/icons/antdesign/antdesign-plain.svg" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          +2349068425081
 
         </div>
         </div>
