--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
 
   <!-- footer design section -->
   <footer class="footer">
+
    <div class="footer-text">
        <p>Copyright &copy; by Joy Offere | All Rights Reserved.</p>
    </div>
    <!-- Working area -->
-
-
+    
     
     <div class="iconbutton">
       <a href="#home">
@@ -218,5 +218,8 @@
       <h3>Thank you for Leaving me a Recommendation</h3>
       <button onclick="showPopup(false)">Ok</button>
     </div>
+
+  </footer>  
+
   </body>
 </html>
