Created Images folders

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="profile_name">
 
           <div class="contact_info">
-            <img src="/JO WHITE ON BLACK.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+            <img src="/Images/JO WHITE ON BLACK.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
             hijoyoffere@gmail.com
             <br>+2349068425081
         </div>
@@ -202,7 +202,7 @@
        <p>Copyright &copy; by Joy Offere | All Rights Reserved.</p>
    </div>
    <!-- Working area -->
-    
+
     
     <div class="iconbutton">
       <a href="#home">
